Blender 2.8 assertion failure when using the Knife angle constraint option #55744

Closed
opened 2018-07-04 02:22:57 +02:00 by Jesse Yurkovich · 5 comments

System Information
Windows 10, nVidia Quadro 600

Blender Version
Broken: 2.8 46bdbc6c78
Worked: 2.7x

Short description of error
Assertion triggered in debug build when using the "angle constraint" option for the Knife tool

Note: Release builds seem fine, however, this prevents debugging of blender during normal operation (in the spirit of providing actionable bugs for the alpha/beta milestones etc.) Triage accordingly I suppose...

Exact steps for others to reproduce the error

  • Start with default scene
  • Go into Edit mode for the cube
  • Hit "K" for knife and start making a cut...
  • Hit "C" to constrain the angle -- assertion failure

Top few lines of the stack trace:

blender.exe!_wassert(const wchar_t * expression, const wchar_t * file_name, unsigned int line_number) Line 444	C++
blender.exe!immBindProgram(unsigned int program, const Gwn_ShaderInterface * shaderface) Line 123	C
blender.exe!immBindBuiltinProgram(GPUBuiltinShader shader_id) Line 39	C
blender.exe!knifetool_draw_angle_snapping(const KnifeTool_OpData * kcd) Line 1013	C
blender.exe!knifetool_draw(const bContext * UNUSED_C, ARegion * UNUSED_ar, void * arg) Line 1059	C
blender.exe!ED_region_draw_cb_draw(const bContext * C, ARegion * ar, int type) Line 276	C
blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1333	C

stacktrace.txt

**System Information** Windows 10, nVidia Quadro 600 **Blender Version** Broken: 2.8 46bdbc6c78b Worked: 2.7x **Short description of error** Assertion triggered in debug build when using the "angle constraint" option for the Knife tool Note: Release builds seem fine, however, this prevents debugging of blender during normal operation (in the spirit of providing actionable bugs for the alpha/beta milestones etc.) Triage accordingly I suppose... **Exact steps for others to reproduce the error** - Start with default scene - Go into Edit mode for the cube - Hit "K" for knife and start making a cut... - Hit "C" to constrain the angle -- assertion failure Top few lines of the stack trace: ``` blender.exe!_wassert(const wchar_t * expression, const wchar_t * file_name, unsigned int line_number) Line 444 C++ blender.exe!immBindProgram(unsigned int program, const Gwn_ShaderInterface * shaderface) Line 123 C blender.exe!immBindBuiltinProgram(GPUBuiltinShader shader_id) Line 39 C blender.exe!knifetool_draw_angle_snapping(const KnifeTool_OpData * kcd) Line 1013 C blender.exe!knifetool_draw(const bContext * UNUSED_C, ARegion * UNUSED_ar, void * arg) Line 1059 C blender.exe!ED_region_draw_cb_draw(const bContext * C, ARegion * ar, int type) Line 276 C blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1333 C ``` [stacktrace.txt](https://archive.blender.org/developer/F3858837/stacktrace.txt)
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscribers: @fclem, @Jeroen-Bakker, @mont29

Added subscribers: @fclem, @Jeroen-Bakker, @mont29
Clément Foucault was assigned by Bastien Montagne 2018-07-24 10:15:46 +02:00

Confirmed, even crashed here on my linux debug build…

@fclem @Jeroen-Bakker from the stack trace seems to be drawing issue, mind checking? thanks.

Confirmed, even crashed here on my linux debug build… @fclem @Jeroen-Bakker from the stack trace seems to be drawing issue, mind checking? thanks.

This issue was referenced by bd6d0b94bc

This issue was referenced by bd6d0b94bc17bd0e1a2a89210732a207a0e2b7d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55744
No description provided.