Fix T55744: Assertion failure using the Knife angle constraint option